--- a/tests/Infinity.Toolkit.Tests/Infinity.Toolkit.Tests.csproj
+++ b/tests/Infinity.Toolkit.Tests/Infinity.Toolkit.Tests.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\Infinity.Toolkit.Experimental\Infinity.Toolkit.Experimental.csproj" />
     <ProjectReference Include="..\..\src\Infinity.Toolkit.Messaging\Infinity.Toolkit.Messaging.csproj" />
     <ProjectReference Include="..\..\src\Infinity.Toolkit\Infinity.Toolkit.csproj" />
   </ItemGroup>
